# macro-economic-tracker

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  db_schema.sql  docker-compose.yml  macro_economics_tracker_prd.md  tracking_ux_wireframes.md
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: access.py  router.py
apps/api/app/api/routes/: health.py  ingestion.py  notifications.py  pipeline.py  stories.py  stream.py  tracks.py
apps/api/app/core/: config.py  logging.py  security.py
apps/api/app/db/: health.py  mutations.py  queries.py  session.py  workflows.py
apps/api/app/schemas/: auth.py  common.py  dashboard.py  inbox.py  ingestion.py  notes.py  stories.py  tracks.py  workspaces.py
apps/api/app/scripts/: __init__.py  migrate.py  run_pipeline_worker.py  run_source_scheduler.py  seed_demo.py
apps/api/app/services/: __init__.py  enrichment.py  snapshots.py  storage.py  stream.py
apps/api/app/services/agents/: __init__.py  base.py  entity_linker.py  event_extractor.py  story_matcher.py  verifier.py  writer.py
apps/api/app/services/ingestion/: __init__.py  runner.py  sources.py  status.py
apps/api/app/services/llm/: __init__.py  client.py
apps/api/app/services/pipeline/: __init__.py  alerts.py  dispatcher.py  queue.py
apps/api/tests/: test_http.py
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: accept-invite-form.tsx  alert-list.tsx  auth-provider.tsx  empty-state.tsx  (+13 more)
migrations/: 20260310_production_beta.sql
(+4 files in other folders)
