[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-economic-tracker-api"
version = "0.1.0"
description = "FastAPI backend for the Macro Economic Tracker"
requires-python = ">=3.10"
dependencies = [
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "orjson>=3.10,<4.0",
  "pydantic-settings>=2.8,<3.0",
  "redis>=5.2,<6.0",
  "sqlalchemy[asyncio]>=2.0.37,<3.0",
  "sse-starlette>=2.2,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
